# tfm-compose

./: .gitignore  compose.yaml
backend/: Dockerfile  api.R
backend/data/: .gitignore  Formato.xlsx
frontend/: Dockerfile  app.py  main.py  pyproject.toml
frontend/assets/: styles.css
frontend/docker/: Dockerfile
frontend/utils/: asyncquery.py  syncquery.py  transforms.py
pgdb/: Dockerfile
